--- a/Exercise_1/BTTL1_Phung_Nhat_Minh_2011629.ipynb
+++ b/Exercise_1/BTTL1_Phung_Nhat_Minh_2011629.ipynb
@@ -443,6 +443,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "zt5fKEgM-r6_"
